k8s/postgres_Arkinov_Zhanbolat.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-db
spec:
  serviceName: todo-db
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: todo-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: todo-db
spec:
  selector:
    app: todo-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
