k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30080
