k8s/ingress_Arkinov_Zhanbolat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: rk2.vencera.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 3000
